--- a/Client/garagespotter/package.json
+++ b/Client/garagespotter/package.json
@@ -10,6 +10,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.6.0",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/react-fontawesome": "^0.2.2",
         "cross-env": "^7.0.3",
         "geolib": "^3.3.4",
         "jwt-decode": "^4.0.0",
