--- a/Client/garagespotter/package.json
+++ b/Client/garagespotter/package.json
@@ -8,7 +8,7 @@
         "build": "vite build",
         "lint": "eslint .",
         "preview": "vite preview",
-        "start": "vite preview" 
+        "start": "vite preview"
     },
     "dependencies": {
         "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -20,6 +20,7 @@
         "leaflet": "^1.9.4",
         "leaflet-geosearch": "^4.0.0",
         "leaflet-routing-machine": "^3.2.12",
+        "lucide-react": "^0.468.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hot-toast": "^2.4.1",
