--- a/AutoHub/AutoHub/appsettings.json
+++ b/AutoHub/AutoHub/appsettings.json
@@ -1,16 +1,24 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
-    "AllowedHosts": "*",
-    "Token": "${TOKEN}",
-    "AzureBlobStorage": {
-        "ConnectionString": "${AZURE_STORAGE_CONNECTION_STRING}"
-    }
+  "AllowedHosts": "*",
+  "Token": "${TOKEN}",
+  "AzureBlobStorage": {
+    "ConnectionString": "${AZURE_STORAGE_CONNECTION_STRING}"
+  },
+  "Email": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "Username": "sehida345@gmail.com",
+    "Password": "igvw kqoj pgaf rize"
+  },
+
+  "AppUrl": "http://localhost:5173" // Your frontend application URL
 }
