--- a/AutoHub/AutoHub/appsettings.json
+++ b/AutoHub/AutoHub/appsettings.json
@@ -20,5 +20,5 @@
     "Password": "igvw kqoj pgaf rize"
   },
 
-  "AppUrl": "http://localhost:5173" // Your frontend application URL
+  "AppUrl": "https://garagespotterclient.onrender.com" // Your frontend application URL
 }
