--- a/AutoHub/AutoHub/appsettings.json
+++ b/AutoHub/AutoHub/appsettings.json
@@ -17,7 +17,7 @@
     "SmtpServer": "smtp.gmail.com",
     "SmtpPort": 587,
     "Username": "sehida345@gmail.com",
-    "Password": "igvw kqoj pgaf rize"
+    "Password": "${gspassword}"
   },
 
   "AppUrl": "https://garagespotterclient.onrender.com" // Your frontend application URL
