--- a/AutoHub/AutoHub/appsettings.json
+++ b/AutoHub/AutoHub/appsettings.json
@@ -20,5 +20,5 @@
     "Password": "${gspassword}"
   },
 
-  "AppUrl": "https://garagespotterclient.onrender.com" // Your frontend application URL
+  "AppUrl": "https://garagespotter-production.up.railway.app" // Your frontend application URL
 }
