--- a/AutoHub/AutoHub/appsettings.json
+++ b/AutoHub/AutoHub/appsettings.json
@@ -19,6 +19,11 @@
     "Username": "sehida345@gmail.com",
     "Password": "${gspassword}"
   },
+  "Google": {
+    "ClinetId": "",
+    "ClientSecret": ""
+
+  },
 
   "AppUrl": "https://garagespotter-production.up.railway.app" // Your frontend application URL
 }
