--- a/AutoHub/AutoHub/appsettings.json
+++ b/AutoHub/AutoHub/appsettings.json
@@ -25,5 +25,5 @@
 
   },
 
-  "AppUrl": "https://garagespotterclient.onrender.com" // Your frontend application URL
+  "AppUrl": "https://garagespotterclient.onrender.com"
 }
